# sysinstaller

./: .gitignore  .gitmodules  CHANGELOG  Makefile.in  README.md  autogen.sh  configure.ac  grub-test.sh  isomount.sh  link-projects.sh  makevm.sh  meson.build  mount.sh  reinstall.cbp  run-vm.sh  run.sh  runvm.sh  stylesheet.css  valgrind.suppression
.github/workflows/: codeql.yml
conf.d/: 01-defaults.conf  70-targets.conf
kvm/: efi-dvd.xml  efi-usb.xml  efi.xml  isolinux-dvd.xml  isolinux-usb.xml  vars.fd
legacy/: Makefile.in  configure.ac
locale/: pt_BR.po  reinstall.pot
models/: full.xml  grub.xml  mini.xml  net.xml
modules/grub2/: Makefile.in  configure.ac
modules/grub2/src/module/: init.cc
modules/isobuilder/: Makefile.in  configure.ac
modules/isobuilder/src/fatfs/: image.cc  settings.cc
modules/isobuilder/src/include/: config.h  config.h.in  efiboot.h  fatfs.h  iso9660.h
modules/isobuilder/src/iso9660/: efiboot.cc  image.cc  settings.cc
modules/isobuilder/src/module/: init.cc
modules/isowriter/: Makefile.in  autogen.sh  configure.ac
modules/isowriter/src/include/: config.h.in
modules/isowriter/src/module/: init.cc
po/: POTFILES.in  meson.build  pt_BR.po  pw3270.pot
rpm/: _service
src/application/: application.cc  main.cc  mainwindow.cc  progress.cc
src/application/widgets/: group.cc  item.cc  sidebar.cc
src/gtk4/: application.cc  dialog.cc  gtkremovabledevicedialog.cc  mainloop.cc  popup.cc  progress.cc  toplevel.cc  writer.cc
src/gui/widgets/: mainwindow.cc
src/include/: config.h.in
src/include/libreinstall/: action.h  repository.h
src/include/libreinstall/diskimage/: abstract.h
src/include/private/: application.h  console.h  gtkremovabledevicedialog.h  html_parser.hpp  mainwindow.h  slpclient.h  toplevel.h
src/include/reinstall/: action.h  activity.h  application.h  dialog.h  group.h  image.h  writer.h
src/include/reinstall/disk/: abstract.h  fat.h
src/include/reinstall/modules/: fatfs.h  grub2.h  iso9660.h  isobuilder.h  isowriter.h
src/include/reinstall/tools/: builder.h  datasource.h  efiboot.h  kernelparameter.h  removabledevicedialog.h  repository.h  script.h  template.h  writer.h
src/include/reinstall/ui/: application.h  dialog.h  mainloop.h  popup.h  progress.h
src/include/reinstall/writer/: abstract.h
src/include/udjat/ui/: dialog.h  popup.h  progress.h
src/include/udjat/ui/gtk4/: application.h  mainloop.h
src/include/widgets/: sidebar.h
src/main/: application.cc  group.cc  item.cc  window.cc
src/modules/: grub2.cc  isowriter.cc
src/modules/grub/: grub.cc
src/modules/isobuilder/: isobuilder.cc  module.cc
src/modules/isobuilder/fatfs/: image.cc  settings.cc
src/modules/isobuilder/iso9660/: image.cc  settings.cc
src/modules/isowriter/: private.h
src/os/linux/: logo.cc
src/ui/console/: application.cc
src/ui/gtk/: icon.cc  label.cc
src/ui/gtk4/: dialog.cc  gtkremovabledevicedialog.cc  interactive.cc  noninteractive.cc  progress.cc  status.cc  toplevel.cc  writer.cc
subprojects/: dmiget.wrap  libfatfs.wrap  libudjat.wrap  libudjatdbus.wrap  libudjathttp.wrap  vmdetect.wrap
sysconf/: launcher.desktop.in  tmpfiles.d.in
templates/: grub.cfg  grub2  isolinux.cfg
xml.d/: 00-mainwindow.xml  10-opensuse-tumbleweed.xml  10-sample.xml  20-opensuse-leap-15-6.xml
